--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guardians of Drum Beat</title>
     <meta name="description" content="Real-time drum tempo monitoring app - Advanced pattern matching for ensemble performance">
     <meta name="theme-color" content="#0891b2">
@@ -13,8 +13,6 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
     <link rel="apple-touch-icon" href="icon-192.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
     
     <style>
         * {
@@ -32,7 +30,6 @@
             user-select: none;
             -webkit-user-select: none;
             -webkit-touch-callout: none;
-            position: fixed;
             width: 100%;
             height: 100%;
         }
