chore: add APP_VERSION banner (v1.1.0) and display on UI

--- a/index.html
+++ b/index.html
@@ -457,6 +457,10 @@
         <div class="header">
             <h1 class="title">🛡️ Guardians of Drum Beat</h1>
         </div>
+        <!-- 버전 배너 (상단에 항상 표시) -->
+        <div id="appVersionBanner" style="position:fixed;top:0;left:0;right:0;background:rgba(6,182,212,0.06);color:#06b6d4;text-align:center;padding:0.25rem 0;font-weight:600;z-index:1001;border-bottom:1px solid rgba(6,182,212,0.06);">
+            Version: <span id="appVersionText">v0.0.0</span>
+        </div>
 
         <!-- 입력 레벨 미터 -->
         <div class="input-meter" aria-hidden="false" role="status" style="margin-bottom:1rem;">
